# gpttherapy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  admin_cli.py  justfile  lambda_function.py  pyproject.toml  terraform
.github/workflows/: deploy.yml
docs/: EXECUTION_PLAN.md
games/: shared-templates.md
games/dungeon/: AGENT.md  init-template.md  invite-template.md  response-templates.md
games/dungeon/missions/: treasure-hunt.md
games/intimacy/: AGENT.md  init-template.md  invite-template.md  response-templates.md
games/intimacy/missions/: communication-skills.md
scripts/: README.md  build_lambda.py  compress_project.py
src/: __init__.py  ai_agent.py  bedrock_mcp_integration.py  datetime_utils.py  email_models.py  email_parser.py  email_verification.py  error_handler.py  game_engine.py  game_state.py  lambda_function.py  logging_config.py  mcp_tools.py  monitoring.py  settings.py  state_machines.py  storage.py  timeout_processor.py
tests/: __init__.py  conftest.py  test_add_player_security.py  test_ai_agent.py  test_datetime_utils.py  test_email_parser.py  test_error_handler.py  test_game_engine.py  test_game_state.py  test_integration.py  test_lambda_function.py  test_mcp_security.py  test_monitoring.py  test_state_machines.py  test_storage.py
